Connect the search auto-suggest UI to the AJAX Web service call.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@670 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -194,6 +194,7 @@ p {
     text-align: left;
     top: 68px;
     width: 351px;
+    z-index: 1;
 }
 #search-suggest li {
     padding: 0.3em 0.4em;
