Add keyboard support (up/down arrows, Enter, Esc, Tab) to search auto-suggest feature.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@673 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -199,8 +199,12 @@ p {
 #search-suggest li {
     padding: 0.3em 0.4em;
 }
-#search-suggest li:hover {
+#search-suggest li.highlighted {
     background-color: #abd6ff;
+    color: #000;
+}
+#search-suggest li:hover {
+    background-color: #c4e2ff;
     color: #000;
 }
 #search-suggest a {
