--- a/gobotany/simplekey/templates/simplekey/search_suggest.html
+++ b/gobotany/simplekey/templates/simplekey/search_suggest.html
@@ -1,5 +1,5 @@
   <form id="search-suggest" action="/simple/search/" autocomplete="off">
-    <input type="text" name="q" value="{{ request.GET.q }}" size="50">
+    <input type="text" name="q" value="{{ request.GET.q }}">
     <button>Search</button>
     <div class="hidden">
         <ul>
