Remove temporary code for shortening character group names from the taxon page view now that the group names have been shortened in the database, in order to fix a bug where the All Characteristics section no longer appeared.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@683 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -110,11 +110,11 @@
 
           <h3 id="all-characteristics">All Characteristics</h3>
 
-          {% for character_group in character_groups|dictsort:'short_name' %}
+          {% for character_group in character_groups|dictsort:'name' %}
           <div id="title-pane-{{ character_group.name|slugify }}"
                dojoType="dijit.TitlePane" open="false"
-               title="{{ character_group.short_name }}">
-              <h4>{{ character_group.short_name }}</h4>
+               title="{{ character_group.name }}">
+              <h4>{{ character_group.name }}</h4>
               {% for character_value in taxon.character_values.all %}
                   {% if character_value.character.character_group.name == character_group.name %}
                       <p><strong>{{ character_value.character.name|lower }}:</strong>
