Add styles for upcoming commit of species page Back link
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@693 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -898,6 +898,11 @@ input.filter_int, input.filter_int2 {
     width: 290px;
 }
 
+#species .back {
+    clear: left;
+    display: block;
+}
+
 #drawings {
     min-height: 400px;
 }
