Correctly format numeric values in the Characters section of the species page. Fix a glossary bug I'd introduced during JSLint cleanup.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@700 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -45,14 +45,26 @@
                  {{ taxon.description }}
              {% else %}
                  This is a placeholder description. (Test glossary highlighting with
-                 the term monomorphic here.)
+                 the term reticulate here.)
              {% endif %}</p>
 
           <h3>Characteristics</h3>
           {% if characteristics %}
               {% for characteristic in characteristics %}
                   <p><strong>{{ characteristic.name|lower }}:</strong>
-                     {{ characteristic.value }}</p>
+                  {% for character_value in taxon.character_values.all %}
+                      {% if character_value.character.name|lower == characteristic.name|lower %}
+                          {% if character_value.character.value_type == 'TEXT' %}
+                              {{ character_value.value_str }}
+                          {% else %}
+                              {{ character_value.value_min }}
+                              {{ character_value.character.unit }} to
+                              {{ character_value.value_max }}
+                              {{ character_value.character.unit }}
+                          {% endif %}
+                      {% endif %}
+                  {% endfor %}
+                  </p>
               {% endfor %}
           {% else %}
               <p>N/A</p>
