--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -93,7 +93,7 @@
           </dl>
           {% endif %}
 
-          <h3>Distribution &amp; Endangered/Invasive Status</h3>
+          <h3>Distribution &amp; Conservation Status</h3>
 
           <div class="dist-status-col">
           <p><strong>ME:</strong> {{ states_status.ME }}</p>
@@ -116,7 +116,7 @@
               {% if taxon.north_american_native %}
                   Yes
               {% else %}
-                  No
+                  No (introduced)
               {% endif %}
           </p>
 
