Save and restore an open filter working area with the URL state, which also improves the back button Undo feature. Fix the close button on the filter working area, which had been dropping all filter state and reloading the results.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@709 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/filter_working.html
+++ b/gobotany/simplekey/templates/simplekey/filter_working.html
@@ -1,5 +1,5 @@
 <div id="filter-working" aria-live="polite" aria-relevant="additions removals">
-  <a class="close" href="#">[x]</a>
+  <a class="close">[x]</a>
   <h3 class="name"></h3>
   <form id="character_values_form">
     <div>
