Add a way to begin to customize the Simple Key for partner sites.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@711 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -1,6 +1,7 @@
 {% extends "simplekey/base.html" %}
+{% block title %}Getting Started{% endblock %}
 {% block content %}
-    <h1>Plant Identifier: Getting Started</h1>
+    <h1>{{ main_heading }}</h1>
     <div>
       {{ blurb|safe }}
     </div>
