Adjust the Distribution & Conservation Status section to include full state names in alphabetical order.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@721 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -95,15 +95,13 @@
 
           <h3>Distribution &amp; Conservation Status</h3>
 
-          <div class="dist-status-col">
-          <p><strong>ME:</strong> {{ states_status.ME }}</p>
-          <p><strong>NH:</strong> {{ states_status.NH }}</p>
-          <p><strong>VT:</strong> {{ states_status.VT }}</p>
-          </div>
-          <div class="dist-status-col">
-          <p><strong>MA:</strong> {{ states_status.MA }}</p>
-          <p><strong>CT:</strong> {{ states_status.CT }}</p>
-          <p><strong>RI:</strong> {{ states_status.RI }}</p>
+          <div>
+              <p><strong>Connecticut:</strong> {{ states_status.CT }}</p>
+              <p><strong>Maine:</strong> {{ states_status.ME }}</p>
+              <p><strong>Massachusetts:</strong> {{ states_status.MA }}</p>
+              <p><strong>New Hampshire:</strong> {{ states_status.NH }}</p>
+              <p><strong>Rhode Island:</strong> {{ states_status.RI }}</p>
+              <p><strong>Vermont:</strong> {{ states_status.VT }}</p>
           </div>
 
           <h3>Wetland Status</h3>
