Correctly fix importer bug not bringing in the correct values for species native status.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@726 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -111,7 +111,7 @@
 
           <h3>North American Native Plant</h3>
           <p>
-              {% if taxon.north_american_native == True %}
+              {% if taxon.north_american_native %}
                   Yes
               {% else %}
                   No (introduced)
