Removed duplicated logic where the client side also had knowledge of how to determine partner site, now keeping this all in one place on the server side. The client side now gets this information via global JS variable supplied by the template.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@730 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/page.html
+++ b/gobotany/simplekey/templates/simplekey/page.html
@@ -55,6 +55,7 @@
 
 {% block js_bottom %}
 <script>
+    {% include "simplekey/partner_site_inline_js.html" %}
     dojo.require('gobotany.sk.simplekey_page');
     dojo.addOnLoad(function() {
         gobotany.sk.simplekey_page.init();
