Clean up self-closing tags (not needed for HTML5) in the base template.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@735 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/base.html
+++ b/gobotany/simplekey/templates/simplekey/base.html
@@ -2,15 +2,15 @@
 <html>
   <head>
     <title>{% block title %}{% endblock %} - Plant Identifier - Go-Botany</title>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     {% block js_top %}{% endblock %}
 
     {% include "dojobase.html" %}
     
     {% include "simplekey/search_suggest_script.html" %}
 
-    <link rel="stylesheet" type="text/css" href="/static/reset.css" />
-    <link rel="stylesheet" href="/static/gobotany.css" />
+    <link rel="stylesheet" type="text/css" href="/static/reset.css">
+    <link rel="stylesheet" href="/static/gobotany.css">
   </head>
   <body class="claro">
     <div id="content">
