--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -151,12 +151,12 @@
       <div id="more-info">
           <h3>Distribution by County</h3>
           <!--[if IE]>
-          <object src="/maps/{{taxon.genus|lower}}-{{specific_epithet}}-distribution-map/"
+          <object src="/maps/{{taxon.genus|lower}}-{{specific_epithet}}-distribution-map.svg"
                   classid="image/svg+xml" id="dist-county-map"
                   title="distribution map for {{ scientific_name }}">
           <![endif]-->
           <!--[if !IE]>-->
-          <object data="/maps/{{taxon.genus|lower}}-{{specific_epithet}}-distribution-map/"
+          <object data="/maps/{{taxon.genus|lower}}-{{specific_epithet}}-distribution-map.svg"
                   type="image/svg+xml" id="dist-county-map"
                   title="distribution map for {{ scientific_name }}">
           <!--<![endif]-->
