Make the habitats on the species page lowercase.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@744 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -72,7 +72,7 @@
               {% if habitats|length > 1 %}
               <ul>
                   {% for habitat in habitats %}
-                      <li>{{ habitat }}</li>
+                      <li>{{ habitat|lower }}</li>
                   {% endfor %}
               </ul>
               {% else %}
