Import species synonyms. Adjust species page so synonyms display as intended.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@745 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -189,13 +189,13 @@
 
           {% if taxon.synonyms.all|length > 0 %}
               <h3>Also Known As</h3>
-              <p>First synonym{% if taxon.synonyms.all|length > 1 %},
+              <p>{{ taxon.synonyms.all|first }}{% if taxon.synonyms.all|length > 1 %},
                   <a id='more-aka' class='more'>more</a>
                   <span dojoType='dijit.Tooltip' connectId='more-aka' position='above'>
                       <span class='moretip'>
                           {% for synonym in taxon.synonyms.all %}
-                              {% if not loop.first %}
-                                  {{ synonym.scientific_name }}{% if not loop.last %}, {% endif %}
+                              {% if not forloop.first %}
+                                  {{ synonym.scientific_name }}{% if not forloop.last %}, {% endif %}
                               {% endif %}
                           {% endfor %}
                       </span>
