Add the Sometimes Confused With section to the search page template after refactoring for it.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@754 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -84,10 +84,10 @@
               {% endif %}
           </ul>
 
-          {% if lookalikes|length > 0 %}
+          {% if taxon.lookalikes|length > 0 %}
           <h3>Sometimes Confused With</h3>
           <dl>
-              {% for lookalike in lookalikes %}
+              {% for lookalike in taxon.lookalikes.all %}
               <dt>{{ lookalike.lookalike_characteristic }}:</dt>
               <dd><em>{{ lookalike.lookalike_scientific_name }}</em></dd>
               {% endfor %}
