Refactor to add Wetland Status to species page search template.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@755 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -115,9 +115,7 @@
           </div>
 
           <h3>Wetland Status</h3>
-          <p>
-              {{ wetland_status }}
-          </p>
+          <p>{{ taxon.wetland_status_text }}</p>
 
           <h3 id="all-characteristics">All Characteristics</h3>
 
