--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -104,14 +104,13 @@
           </p>
 
           <h3>Distribution &amp; Conservation Status</h3>
-
           <div>
-              <p><strong>Connecticut:</strong> {{ states_status.CT }}</p>
-              <p><strong>Maine:</strong> {{ states_status.ME }}</p>
-              <p><strong>Massachusetts:</strong> {{ states_status.MA }}</p>
-              <p><strong>New Hampshire:</strong> {{ states_status.NH }}</p>
-              <p><strong>Rhode Island:</strong> {{ states_status.RI }}</p>
-              <p><strong>Vermont:</strong> {{ states_status.VT }}</p>
+              <p><strong>Connecticut:</strong> {{ taxon.conservation_status_ct }}</p>
+              <p><strong>Maine:</strong> {{ taxon.conservation_status_me }}</p>
+              <p><strong>Massachusetts:</strong> {{ taxon.conservation_status_ma }}</p>
+              <p><strong>New Hampshire:</strong> {{ taxon.conservation_status_nh }}</p>
+              <p><strong>Rhode Island:</strong> {{ taxon.conservation_status_ri }}</p>
+              <p><strong>Vermont:</strong> {{ taxon.conservation_status_vt }}</p>
           </div>
 
           <h3>Wetland Status</h3>
