Strip the taxonomic authority from the synonyms during import, for better searchability (especially in the suggestions) and presentation. Keep the full name in the database in case we still want to offer it somewhere.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@758 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -186,7 +186,7 @@
 
           {% if taxon.synonyms.all|length > 0 %}
               <h3>Also Known As</h3>
-              <p>{{ taxon.synonyms.all|first }}{% if taxon.synonyms.all|length > 1 %},
+              <p>{% for synonym in taxon.synonyms.all %}{% if forloop.first %}{{ synonym.scientific_name }}{% endif %}{% endfor %}{% if taxon.synonyms.all|length > 1 %},
                   <a id='more-aka' class='more'>more</a>
                   <span dojoType='dijit.Tooltip' connectId='more-aka' position='above'>
                       <span class='moretip'>
