Fix bug on the species page that prevented the 'Sometimes Confused With' heading from going away when no data for it is present.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@764 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -84,14 +84,14 @@
               {% endif %}
           </ul>
 
-          {% if taxon.lookalikes|length > 0 %}
-          <h3>Sometimes Confused With</h3>
-          <dl>
-              {% for lookalike in taxon.lookalikes.all %}
-              <dt>{{ lookalike.lookalike_characteristic }}:</dt>
-              <dd><em>{{ lookalike.lookalike_scientific_name }}</em></dd>
-              {% endfor %}
-          </dl>
+          {% if taxon.lookalikes.all|length > 0 %}
+            <h3>Sometimes Confused With</h3>
+            <dl>
+                {% for lookalike in taxon.lookalikes.all %}
+                    <dt>{{ lookalike.lookalike_characteristic }}:</dt>
+                    <dd><em>{{ lookalike.lookalike_scientific_name }}</em></dd>
+                {% endfor %}
+            </dl>
           {% endif %}
 
           <h3>North American Native Status</h3>
