Add question and hint to filter working area.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@911 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/filter_working.html
+++ b/gobotany/simplekey/templates/simplekey/filter_working.html
@@ -6,6 +6,10 @@
       <div class="values">
       </div>
       <div class="info">
+        <div class="question">
+        </div>
+        <div class="hint">
+        </div>
         <div class="info-sub">
           <h3>Key Characteristics</h3>
           <div class="key-characteristics"></div>
