Display laypersons' labels for character values when available.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@913 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/filter_working.html
+++ b/gobotany/simplekey/templates/simplekey/filter_working.html
@@ -1,28 +1,26 @@
 <div id="filter-working" aria-live="polite" aria-relevant="additions removals">
-  <a class="close">[x]</a>
-  <h3 class="name"></h3>
-  <form id="character_values_form">
-    <div>
-      <div class="values">
-      </div>
-      <div class="info">
-        <div class="question">
+    <a class="close">[x]</a>
+    <h3 class="name"></h3>
+    <form id="character_values_form">
+        <div>
+            <div class="info">
+                <div class="question"></div>
+                <div class="hint"></div>
+
+                <div class="values"></div>
+
+                <button name="apply" type="button">Apply</button>
+            
+                <div class="info-sub">
+                    <h3>Key Characteristics</h3>
+                    <div class="key-characteristics"></div>
+                </div>
+                <div class="info-sub">
+                    <h3>Notable Exceptions</h3>
+                    <div class="notable-exceptions"></div>
+                </div>
+
+            </div>
         </div>
-        <div class="hint">
-        </div>
-        <div class="info-sub">
-          <h3>Key Characteristics</h3>
-          <div class="key-characteristics"></div>
-        </div>
-        <div class="info-sub">
-          <h3>Notable Exceptions</h3>
-          <div class="notable-exceptions"></div>
-        </div>
-        <div class="clear">&nbsp;</div>
-        
-        <button name="apply" type="button">Apply</button>
-      </div>
-      <div class="clear">&nbsp;</div>
-    </div>
-  </form>
+    </form>
 </div>
