Finish redesigning filter working area with a scrolling list of values. Add the laypersons' (friendly) character values to left-side filter list.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@915 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/gobotany.css
+++ b/gobotany/static/gobotany.css
@@ -296,6 +296,10 @@ p {
     line-height: 1.2em;
 }
 
+#filter-working .values label:first-child {
+    border-top: 0;
+}
+
 #filter-working .values label img {
     border: 1px dashed #ccc;
     float: right;
